--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   csv: ^5.0.2
   path: ^1.8.2
   flutter_native_splash: ^2.2.19
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
