--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_native_splash: ^2.2.19
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
