--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,19 +40,19 @@ dependencies:
   system_theme: ^2.1.0
   window_manager: ^0.3.2
   flutter_acrylic: ^1.1.2
-  go_router: ^7.0.0
+  go_router: ^10.1.2
   file_picker: ^5.2.11
   mailer: ^6.0.1
-  file_selector: ^0.9.2+4
+  file_selector: ^1.0.1
   shared_preferences: ^2.1.0
   get_it: ^7.3.0
-  syncfusion_flutter_pdfviewer: ^21.1.41
+  syncfusion_flutter_pdfviewer: ^22.2.12
   csv: ^5.0.2
   path: ^1.8.2
   flutter_native_splash: ^2.2.19
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  intl: ^0.17.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
